--- a/style.css
+++ b/style.css
@@ -56,14 +56,14 @@
         }
         @keyframes changeColor {
             0% { color: black;  }
-            12% { color: blue; font-family: "Courier New", monospace; }
-            24% { color: green; font-family: "Georgia", serif; }
-            36% { color: purple; font-family: "Impact", sans-serif; }
-            48% { color: orange; font-family: "Times New Roman", serif; }
-            60% { color: teal; font-family: 'Tahoma', sans-serif; }
-            72% { color: brown; font-family: 'Impact', sans-serif; }
-            84% { color: darkblue; font-family: 'Lucida Console', monospace; }
-            100% { color: lightseagreen; font-family: 'Comic Sans MS', cursive; }
+            12% { color: blue; }
+            24% { color: green; }
+            36% { color: purple;  }
+            48% { color: orange;  }
+            60% { color: teal;  }
+            72% { color: brown;  }
+            84% { color: darkblue;  }
+            100% { color: lightseagreen;}
         }
 
         .animated-word {
